 - Async HOWTO expanded muchly.
 - twisted.python.usage outputs the actual defaults, not passed in values.

twisted.trial
-------------
 - Rewritten, a bunch of bugs fixed, a few more added.

twisted.internet
----------------
 - Multi-listen UDP multicast support
 - protocol.ClientCreator has a connectSSL.
 - defer.deferredGenerator: allows you to write Deferred code w/o callbacks.
 - New defer.DeferredLock/DeferredSemaphore/DeferredQueue.
 - Add utils.getProcessOutputAndValue to get stdout/err/value.

 - Default DNS resolver is now non-blocking.
 - Increased default TCP accept backlog from 5 to 50.
 - Make buffering large amounts of TCP data work on Windows.
 - Fixed SSL disconnect to not wait for remote host. Fixes issue with firefox.
 - Separate state for Deferred finalization so that GC-loops preventing
   finalization don't occur.
 - Many Process bugfixes
 - Processes spawned on windows can successfully use sockets
 - gtk2reactor can optionally use glib event loop instead of gtk
 - gtk2reactor notifies gobject to initialize thread support
 - Fix registering a streaming producer on a transport.
 - Close client sockets explicitly after failed connections.
 - ReconnectingClientFactory now continues attempting to reconnect after
   connection timeout errors.

twisted.protocols
-----------------
 - Portforward doesn't start reading from a client until a connection is made.
 - Bugfixes in twisted.protocols.loopback
 - Improve speed of twisted.protocols.LineReceiver.
 - LineReceiver implements IProducer. (stop/pause/resumeProducing)
 - SOCKSv4 properly closes connections

twisted.enterprise
------------------
 - Add "new connection" callback to adbapi.ConnectionPool to allow for
   custom db connection setup (cp_openfun)
 - adbapi.ConnectionPool automatic reconnection support
 - Don't log exceptions extraneously


1.3.0 (May 14, 2004):

- Address objects for IPv4 and Unix addresses throughout twisted.internet.
- Improved connected UDP APIs.